Add new extractors and tests for CodeExtractor and MultiService methods